Fully port feature generation